--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
 html, body{
   @apply h-screen w-screen of-hidden
 }
+
+.noto-sans-sc {
+  font-family: "Noto Sans", "Noto Sans SC", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-variation-settings: "wdth" 100;
+  font-style: normal;
+}
+
