--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,3 +10,17 @@ html, body{
   font-style: normal;
 }
 
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: orange;
+  opacity: 0.75;
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
